[SC-12612] - Avoid overlapping scroll to confirm button

--- a/src/app/crm/contacts/personal-details/personal-details-dialog/personal-details-dialog.less
+++ b/src/app/crm/contacts/personal-details/personal-details-dialog/personal-details-dialog.less
@@ -105,6 +105,11 @@
         .field {
             line-height: 30px;
             padding: 10px 0;
+            ::ng-deep inplace-edit {
+                .inplace-edit-edit-mode {
+                    width: 280px;
+                }
+            }
         }
 
         .affiliate-field {
